# JavaNativeLink

./: CMakeLists.txt  Point.java  README.md  build.bat  build.ps1  build.sh  generate_java_test  obj_sym.txt  test_inject  test_inject.cpp  test_reflection  test_reflection.cpp
examples/cardgame/: CardGame.cpp  CardGame.java  CardGameUI.java  Generator.cpp  build.bat  build.sh
include/JavaNativeLink/: Exporter.h  JavaGenerator.h
src/: Exporter.cpp
template/: Generator.cpp  Main.java  MyClass.cpp  README.md  build.bat  build.sh
tests/: CMakeLists.txt  generate_java_test.cpp  test_core.cpp
tests/java_e2e/: Generator  Generator.cpp  Main.java  Point.asm  Point.cpp  Point.java  PointTest.java  libJavaNativeLinkTest.dylib  libPoint.dylib  test_dylib  test_dylib.cpp  test_map_type  test_map_type.cpp
